fixed actions workflow

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,25 +1,31 @@
 name: CI/CD Pipeline
 
 on:
- push:
-    branches: [ main ]
+  push:
+    branches: [main]
 
 jobs:
- build:
-   runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-   steps:
-   - name: Checkout code
-     uses: actions/checkout@v5
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-   - name: Install pnpm
-     uses: pnpm/action-setup@v2
-     with:
-       version: 10
-       cache: true
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+          run_install: false
 
-   - name: Install dependencies
-     run: pnpm install
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: pnpm
 
-   - name: Run tests
-     run: pnpm test
+      - name: Install dependencies
+        run: pnpm install 
+
+      - name: Run tests
+        run: pnpm test
